[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'kickstarter-runtime-wasm'
version = '1.0.0'
[dependencies.kickstarter-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['kickstarter-runtime/std']

[workspace]
members = []

[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'
